[FIX] When Fullscreen is activated, shift menu toggle button to the left to avoid overlapping the full-screen button. Thanks, Xavi.
git-svn-id: https://svn.code.sf.net/p/tikiwiki/code/trunk@60842 b456876b-0849-0410-b77d-98878d47e9d5

--- a/themes/base_files/less/tiki-miscellaneous_global.less
+++ b/themes/base_files/less/tiki-miscellaneous_global.less
@@ -183,6 +183,9 @@ body.fullscreen {
 	z-index: 1040;
 }
 
+// When Fullscreen is activated, shift menu toggle button to the left to avoid overlapping the full-screen button
+#fullscreenbutton ~ nav .navbar-toggle { right: 42px; }
+
 #show-errors-button {
 	z-index: 1024;
 }
